--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="head-container">
-        <img id="pauseIcon" src="assets/pause.svg" alt="Pause" onclick="pauseOrPlay()" style="display: block;">
-        <img id="playIcon" src="assets/play.svg" alt="Pause" onclick="pauseOrPlay()" style="display: none;">
+        <img id="pauseIcon" src="assets/pause.svg" alt="Pause" onclick="pauseOrPlay(true)" style="display: block;">
+        <img id="playIcon" src="assets/play.svg" alt="Play" onclick="pauseOrPlay(false)" style="display: none;">
         <p>Snake Amazon</p>
     </div>
 
