feat: menambah fitur countdown sebelum startGame

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     </div>
 
     <audio id="bgAudio" src="assets/sound/backsound.mp3" loop></audio>
-<audio id="eatAudio" src="assets/sound/makan.mp3"></audio>
-<audio id="bombAudio" src="assets/sound/duar.mp3"></audio>
+    <audio id="eatAudio" src="assets/sound/makan.mp3"></audio>
+    <audio id="bombAudio" src="assets/sound/duar.mp3"></audio>
+    <audio id="CDAudio" src="assets/sound/countdown.mp3"></audio>
 
     <div class="game-container">
         <!-- Kontainer Kiri dengan Peraturan Permainan -->
@@ -97,6 +98,9 @@
         </div>
     </div>
 
+    <!-- Countdown -->
+    <p id="countdown"></p>
+    
 </body>
 <script src="main.js"></script>
 </html>
