--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
 
+    <script src="assets/data/log.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,10 +18,12 @@
     </div>
 
     <audio id="bgAudio" src="assets/sound/backsound.mp3" loop></audio>
-<audio id="eatAudio" src="assets/sound/makan.mp3"></audio>
-<audio id="bombAudio" src="assets/sound/duar.mp3"></audio>
+    <audio id="eatAudio" src="assets/sound/makan.mp3"></audio>
+    <audio id="bombAudio" src="assets/sound/duar.mp3"></audio>
+    <audio id="CDAudio" src="assets/sound/countdown.mp3"></audio>
 
     <div class="game-container">
+        
         <!-- Kontainer Kiri dengan Peraturan Permainan -->
         <div class="card-l">
             <div class="card-header">
@@ -97,6 +100,9 @@
         </div>
     </div>
 
+    <!-- Countdown -->
+    <p id="countdown"></p>
+    
 </body>
 <script src="main.js"></script>
 </html>
