update style landing page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 
 <body>
+    <div class="landing-page">
+        <img src="assets/bg.png" alt="bg">
+        <div class="content">
+            <p>Snake Amazon</p>
+            <button onclick="closeLandingPage()" class="open-game">Open Game</button>
+        </div>
+    </div>
+
     <div class="head-container">
         <img id="pauseIcon" src="assets/pause.svg" alt="Pause" onclick="pauseOrPlay(true)" style="display: block;">
         <img id="playIcon" src="assets/play.svg" alt="Play" onclick="pauseOrPlay(false)" style="display: none;">
@@ -26,7 +34,7 @@
     <audio id="CDAudio" src="assets/sound/countdown.mp3"></audio>
 
     <div class="game-container">
-        
+
         <!-- Kontainer Kiri dengan Peraturan Permainan -->
         <div class="card-l">
             <div class="card-header">
@@ -75,7 +83,6 @@
     </div>
 
     <div class="bottom-container">
-
         <div class="container-keys">
             <div class="arrow-keys">
                 <div class="overlap-group">
@@ -90,12 +97,6 @@
             </div>
         </div>
     </div>
-
-    <div class="landing-page">
-        <img src="assets/bg.png" alt="bg">
-        <button onclick="toggleForm()" class="landing-page-button">Main</button>
-    </div>
-    <div class="overlay"></div>
 
     <!-- Start Game Modal -->
     <div id="startGameModal">
