feat: click sfx

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <audio id="eatAudio" src="assets/sound/makan.mp3"></audio>
     <audio id="bombAudio" src="assets/sound/duar.mp3"></audio>
     <audio id="CDAudio" src="assets/sound/countdown.mp3"></audio>
+    <audio id="clickSfx" src="assets/sound/click.mp3"></audio>
 
     <div class="game-container">
         
