--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 </head>
 
 <body>
+    <div class="loading-animation">
+        <div class="ring">Loading
+            <span></span>
+        </div>
+    </div>
+    
     <div class="landing-page">
         <img src="assets/bg.png" alt="bg">
         <div class="content">
