fix: ada komponen muter2 gajelas😭

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="loading-animation">
         <div class="ring">Loading
-            <span></span>
+            <span class="spinner"></span>
         </div>
     </div>
     
