--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="spinner"></span>
         </div>
     </div>
-    
+
     <div class="landing-page">
         <img src="assets/bg.png" alt="bg">
         <div class="content">
@@ -153,7 +153,7 @@
         <div class="game-over-modal">
             <div class="game-over-content">
                 <span class="close">X</span>
-                <p>Game Over :(</p>
+                <h1>Game Over :(</h1>
                 <p>Top 5 Players</p>
                 <table class="top-players">
                     <thead>
@@ -165,9 +165,29 @@
                     </thead>
                     <tbody class="top-players-data">
                         <tr>
-                            <!-- <td>Hamdan</td>
+                            <td>Hamdan</td>
                             <td>High</td>
-                            <td>200</td> -->
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
                         </tr>
                     </tbody>
                 </table>
