--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                     style="display: none;">
             </div>
             <img id="replayIcon" src="assets/replay.svg" alt="Replay" onclick="ReplayGame" style="display: none;">
-            <img id="replayIcon" src="assets/replay.svg" alt="Replay" onclick="" style="display: none;">
             <img id="homeIcon" src="assets/home.svg" alt="Home" onclick="" style="display: none;">
         </div>
         <p>Snake Amazon</p>
@@ -57,10 +56,10 @@
 
     <audio id="bgm" src="assets/sound/bgm.mp3" loop></audio>
     <audio id="bgAudio" src="assets/sound/backsound.mpeg" loop></audio>
-    <audio id="eatAudio" src="assets/sound/makan.mp3"></audio>
-    <audio id="bombAudio" src="assets/sound/duar.mp3"></audio>
-    <audio id="CDAudio" src="assets/sound/countdown.mp3"></audio>
-    <audio id="clickSfx" src="assets/sound/click.mp3"></audio>
+    <audio id="eatAudio" class="sound-effect" src="assets/sound/makan.mp3"></audio>
+    <audio id="bombAudio" class="sound-effect" src="assets/sound/duar.mp3"></audio>
+    <audio id="CDAudio" class="sound-effect" src="assets/sound/countdown.mp3"></audio>
+    <audio id="clickSfx" class="sound-effect" src="assets/sound/click.mp3"></audio>
 
     <div class="game-container">
 
