fix: perbaiki code yang tidak terhapus

--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
     </div>
 
     <div class="head-container">
-        <img id="pauseIcon" src="assets/pause.svg" alt="Pause" onclick="pauseOrPlay(true)" style="display: block;">
-        <img id="playIcon" src="assets/play.svg" alt="Play" onclick="pauseOrPlay(false)" style="display: none;">
         <div class="icon">
             <div class="pause-play-icon">
-                <img id="pauseIcon" src="assets/pause.svg" alt="Pause" onclick="pauseOrPlay(true)"
-                    style="display: block;">
+                <img id="pauseIcon" src="assets/pause.svg" alt="Pause" onclick="pauseOrPlay(true)" style="display: block;">
                 <img id="playIcon" src="assets/play.svg" alt="Play" onclick="pauseOrPlay(false)" style="display: none;">
             </div>
             <div class="music-mute-icon" style="display: none;">
@@ -48,7 +45,7 @@
                 <img id="soundSlashIcon" src="assets/sound-slash.svg" alt="Sound Slash" onclick="muteSound(false)"
                     style="display: none;">
             </div>
-            <img id="replayIcon" src="assets/replay.svg" alt="Replay" onclick="ReplayGame" style="display: none;">
+            <img id="replayIcon" src="assets/replay.svg" alt="Replay" onclick="replayGame()" style="display: none;">
             <img id="homeIcon" src="assets/home.svg" alt="Home" onclick="" style="display: none;">
         </div>
         <p>Snake Amazon</p>
