feat: transisi konten leaderboard

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                 <h1>Top 5 Players</h1>
                 <div class="level-navigation">
                     <button id="leaderEasy" onclick="showLevel('easy')" style="border-bottom: 3px solid #fff; background-color: rgba(0, 0, 0, 0.2);">Easy</button>
-                    <button id="leaderMedium" onclick="showLevel('medium')">Medium</button>
-                    <button id="leaderHigh" onclick="showLevel('high')">High</button>
+                    <button id="leaderMedium" onclick="showLevel('medium')" style="border-bottom: 3px solid rgba(255, 255, 255, 0.2);">Medium</button>
+                    <button id="leaderHigh" onclick="showLevel('high')" style="border-bottom: 3px solid rgba(255, 255, 255, 0.2);">High</button>
                 </div>
                 <table class="top-players">
                     <thead>
