--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="newsModal">
                 <div class="news-modal">
                     <div class="news-content">
-                        <span id="closeNews" class="close-button" onclick="closeNews">X</span>
+                        <span id="closeNews" class="close-button" onclick="closeNews()">X</span>
                         <h2>Snake Amazon News</h1>
                         <p>Snake Amazon is now available in a website version optimized exclusively for tablet and mobile devices 💖✨</p>
                     </div>
