--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="news">
             <img id="newsIcon" src="assets/news.svg" alt="News" onclick="newsDisplay()">
             <div class="news-content">
-                <span id="closeNews" class="close-button" onclick="closeNews()">X</span>
+                <span id="closeNews" class="close-button" onclick="closeNews()" aria-disabled="true">X</span>
                 <h3>Snake Amazon News</h3>
                 <p>Snake Amazon is now available in a website version optimized exclusively for tablet and
                     mobile devices 💖✨</p>
@@ -175,7 +175,7 @@
     <div id="gameOverModal">
         <div class="game-over-modal">
             <div class="game-over-content">
-                <span class="close" onclick="closeGameOver()">X</span>
+                <span class="close" onclick="closeGameOver()" aria-disabled="true">X</span>
                 <h1>Game Over :(</h1>
 
                 <p>Top 5 Players</p>
@@ -227,7 +227,7 @@
     <div id="leaderboard" style="display: none;">
         <div class="leaderboard-modal">
             <div class="leaderboard-content">
-                <span class="closeLeaderboard" onclick="closeLeaderboard()">X</span>
+                <span class="closeLeaderboard" onclick="closeLeaderboard()" aria-disabled="true">X</span>
                 <h1>Top 5 Players</h1>
                 <div class="level-navigation">
                     <button id="leaderEasy" onclick="showLevel('easy')"
