--- a/index.html
+++ b/index.html
@@ -31,22 +31,18 @@
     </div>
 
     <div class="landing-page">
-        <img src="assets/bg.png" alt="bg">
+        <img class="bg-cover" src="assets/bg.png" alt="bg">
         <div class="content">
             <p>Snake Amazon</p>
             <button onclick="closeLandingPage()" class="open-game">Open Game</button>
         </div>
-        <div class="icon-news">
+        <div class="news">
             <img id="newsIcon" src="assets/news.svg" alt="News" onclick="newsDisplay()">
-            <div id="newsModal">
-                <div class="news-modal">
-                    <div class="news-content">
-                        <span id="closeNews" class="close-button" onclick="closeNews()">X</span>
-                        <h2>Snake Amazon News</h1>
-                            <p>Snake Amazon is now available in a website version optimized exclusively for tablet and
-                                mobile devices 💖✨</p>
-                    </div>
-                </div>
+            <div class="news-content">
+                <span id="closeNews" class="close-button" onclick="closeNews()">X</span>
+                <h3>Snake Amazon News</h3>
+                <p>Snake Amazon is now available in a website version optimized exclusively for tablet and
+                    mobile devices 💖✨</p>
             </div>
         </div>
     </div>
