--- a/index.html
+++ b/index.html
@@ -13,25 +13,73 @@
 </head>
 
 <body>
+    <div class="circle-cursor"></div>
+    <div class="circle-cursor"></div>
+    <div class="circle-cursor"></div>
+    <div class="circle-cursor"></div>
+    <div class="circle-cursor"></div>
+    <div class="circle-cursor"></div>
+    <div class="circle-cursor"></div>
+    <div class="circle-cursor"></div>
+    <div class="circle-cursor"></div>
+    <div class="circle-cursor"></div>
+
+    <div class="loading-animation">
+        <div class="ring">Loading
+            <span class="spinner"></span>
+        </div>
+    </div>
+
     <div class="landing-page">
-        <img src="assets/bg.png" alt="bg">
+        <img class="bg-cover" src="assets/bg.png" alt="bg">
         <div class="content">
             <p>Snake Amazon</p>
             <button onclick="closeLandingPage()" class="open-game">Open Game</button>
         </div>
+        <div class="news">
+            <img id="newsIcon" src="assets/news.svg" alt="News" onclick="newsDisplay()">
+            <div class="news-content">
+                <span id="closeNews" class="close-button" onclick="closeNews()">X</span>
+                <h3>Snake Amazon News</h3>
+                <p>Snake Amazon is now available in a website version optimized exclusively for tablet and
+                    mobile devices 💖✨</p>
+            </div>
+        </div>
     </div>
 
     <div class="head-container">
-        <img id="pauseIcon" src="assets/pause.svg" alt="Pause" onclick="pauseOrPlay(true)" style="display: block;">
-        <img id="playIcon" src="assets/play.svg" alt="Play" onclick="pauseOrPlay(false)" style="display: none;">
+        <div class="icon">
+            <div class="pause-play-icon">
+                <img id="pauseIcon" src="assets/pause.svg" alt="Pause" onclick="pauseOrPlay(true)"
+                    style="display: block;">
+                <img id="playIcon" src="assets/play.svg" alt="Play" onclick="pauseOrPlay(false)" style="display: none;">
+            </div>
+            <div class="music-mute-icon" style="display: none;">
+                <img id="musicIcon" src="assets/music.svg" alt="Music" onclick="muteMusic(true)" style="display: block;"
+                    title="Music on">
+                <img id="musicSlashIcon" src="assets/music-slash.svg" alt="Music Slash" onclick="muteMusic(false)"
+                    style="display: none;" title="Music off">
+            </div>
+            <div class="sound-mute-icon" style="display: none;">
+                <img id="soundIcon" src="assets/sound.svg" alt="Sound" onclick="muteSound(true)" style="display: block;"
+                    title="Sfx on">
+                <img id="soundSlashIcon" src="assets/sound-slash.svg" alt="Sound Slash" onclick="muteSound(false)"
+                    style="display: none;" title="Sfx off">
+            </div>
+            <img id="replayIcon" src="assets/replay.svg" alt="Replay" onclick="replayGame()" style="display: none;"
+                title="Replay current game">
+            <img id="homeIcon" src="assets/home.svg" alt="Home" onclick="returnToLandingPage()" style="display: none;"
+                title="Back to Homepage">
+        </div>
         <p>Snake Amazon</p>
     </div>
 
     <audio id="bgm" src="assets/sound/bgm.mp3" loop></audio>
     <audio id="bgAudio" src="assets/sound/backsound.mpeg" loop></audio>
-    <audio id="eatAudio" src="assets/sound/makan.mp3"></audio>
-    <audio id="bombAudio" src="assets/sound/duar.mp3"></audio>
-    <audio id="CDAudio" src="assets/sound/countdown.mp3"></audio>
+    <audio id="eatAudio" class="sound-effect" src="assets/sound/makan.mp3"></audio>
+    <audio id="bombAudio" class="sound-effect" src="assets/sound/duar.mp3"></audio>
+    <audio id="CDAudio" class="sound-effect" src="assets/sound/countdown.mp3"></audio>
+    <audio id="clickSfx" class="sound-effect" src="assets/sound/click.mp3"></audio>
 
     <div class="game-container">
 
@@ -108,13 +156,14 @@
                 <form id="user-form">
                     <p class="input-info" style="color: rgb(255, 82, 13);"></p>
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" spellcheck="false" required>
+                    <input type="text" id="name" name="name" spellcheck="false" required
+                        title="Input your name here sir...">
 
                     <label for="level">Select Level</label>
-                    <select id="level" name="level">
-                        <option value="easy">Easy</option>
-                        <option value="medium">Medium</option>
-                        <option value="high">High</option>
+                    <select id="level" name="level" title="Choose your level">
+                        <option value="easy" title="Easy game for fun">Easy</option>
+                        <option value="medium" title="Normal person">Medium</option>
+                        <option value="high" title="God mode">High</option>
                     </select>
                     <button type="button" id="startButton">Start Game</button>
                 </form>
@@ -127,7 +176,8 @@
         <div class="game-over-modal">
             <div class="game-over-content">
                 <span class="close">X</span>
-                <p>Game Over :(</p>
+                <h1>Game Over :(</h1>
+
                 <p>Top 5 Players</p>
                 <table class="top-players">
                     <thead>
@@ -139,9 +189,87 @@
                     </thead>
                     <tbody class="top-players-data">
                         <tr>
-                            <!-- <td>Hamdan</td>
+                            <td>Hamdan</td>
                             <td>High</td>
-                            <td>200</td> -->
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <div class="bottom-btn-gameover">
+                    <img id="leaderboardIcon" src="assets/trophy.svg" title="See Others Top 5 Players" />
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Leaderboard -->
+    <div id="leaderboard" style="display: none;">
+        <div class="leaderboard-modal">
+            <div class="leaderboard-content">
+                <span class="closeLeaderboard">X</span>
+                <h1>Top 5 Players</h1>
+                <div class="level-navigation">
+                    <button id="leaderEasy" onclick="showLevel('easy')"
+                        style="border-bottom: 3px solid #fff; background-color: rgba(0, 0, 0, 0.2);">Easy</button>
+                    <button id="leaderMedium" onclick="showLevel('medium')"
+                        style="border-bottom: 3px solid rgba(255, 255, 255, 0.2);">Medium</button>
+                    <button id="leaderHigh" onclick="showLevel('high')"
+                        style="border-bottom: 3px solid rgba(255, 255, 255, 0.2);">High</button>
+                </div>
+                <table class="top-players">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Level</th>
+                            <th>Score</th>
+                        </tr>
+                    </thead>
+                    <tbody id="topByLevel">
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
+                        </tr>
+                        <tr>
+                            <td>Hamdan</td>
+                            <td>High</td>
+                            <td>200</td>
                         </tr>
                     </tbody>
                 </table>
