--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="canvas-container">
             <div class="score">
                 <!-- Elemen untuk Menampilkan Skor -->
-                <p id="score">Score (): 0</p>
+                <p id="score">Score: 0</p>
                 <!-- Elemen untuk Menampilkan Skor Tertinggi -->
                 <p id="highscore">Highscore: 0</p>
             </div>
@@ -165,11 +165,7 @@
                         <option value="medium" title="Normal person">Medium</option>
                         <option value="high" title="God mode">High</option>
                     </select>
-                    <div>
-                        <button type="button" id="startButton">Start Game</button>
-                        <span></span>
-                        <button type="button" id="guestMode">Guest Mode</button>
-                    </div>
+                    <button type="button" id="startButton">Start Game</button>
                 </form>
             </div>
         </div>
