--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
                 <p id="score">Score (): 0</p>
                 <!-- Elemen untuk Menampilkan Skor Tertinggi -->
                 <p id="highscore">Highscore: 0</p>
+                <!-- Interaktif saat ular makan -->
             </div>
+            <p id="interactive" style="display: none; position: relative;"></p>
             <canvas width="400" height="400" id="game-canvas"></canvas>
         </div>
 
