--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
                     +5 Score
                 </li>
                 <li>
+                    <img src="assets/item/golden-apple.svg" alt="Logo Golden Apel">
+                    +10 - 50 Score
+                </li>
+                <li>
                     <img src="assets/item/bomb.svg" alt="Logo Bomb">
                     Kill Snake
                 </li>
