--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta property="og:title" content="Snake Amazon">
+    <meta property="og:description" content="Achieve your highest score and beat other players.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/wdp-12/Finalproject1_Kelompok1/main/assets/preview.png">
+    <meta property="og:url" content="https://wdp-12.github.io/Finalproject1_Kelompok1/index.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" type="image/x-icon" href="assets/icon.png">
